# dulwich-stubs

./: .bumpversion.cfg  .isort.cfg  .pre-commit-config.yaml  .travis.yml  CONTRIBUTING.rst  MANIFEST.in  README.rst  __pkginfo__.py  formate.toml  lint_roller.sh  no_as.py  pyproject.toml  repo_helper.yml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: octocheese.yml  python_ci_linux.yml
dulwich-stubs/: __init__.py  archive.py  archive.pyi  cli.py  cli.pyi  client.py  client.pyi  config.py  config.pyi  diff_tree.py  diff_tree.pyi  errors.py  errors.pyi  fastexport.py  fastexport.pyi  file.py  file.pyi  graph.py  graph.pyi  greenthreads.py  greenthreads.pyi  hooks.py  hooks.pyi  ignore.py  ignore.pyi  index.py  index.pyi  lfs.py  lfs.pyi  line_ending.py  line_ending.pyi  log_utils.py  log_utils.pyi  lru_cache.py  lru_cache.pyi  mailmap.py  mailmap.pyi  object_store.py  object_store.pyi  objects.py  (+21 more)
dulwich-stubs/contrib/: __init__.pyi  diffstat.pyi  paramiko_vendor.pyi  release_robot.py  release_robot.pyi  swift.py  swift.pyi  test_release_robot.py  test_release_robot.pyi  test_swift.py  test_swift.pyi  test_swift_smoke.py  test_swift_smoke.pyi
